# Nemoh

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Nemoh.cal  README.md  fic_com.mod  freq2m_0.m  freq2m_0.mat  makefile  makefile_1  makefile_2  makefile_NEMOH1  makefile_QTF  makefile_QTF22
Validation/: CMakeLists.txt  Test cases description.doc
Validation/2_2Bodies/reference_results/: 2Bodies.lay
Validation/3_NonSymmetrical/reference_results/: NonSymmetrical-1.lay
Validation/4_Postprocessing/reference_results/: Postprocessing.lay
Validation/5_QuickTests/1_Sphere/: Nemoh.cal
Validation/5_QuickTests/3_FiniteDepthSphere/: Nemoh.cal
Validation/5_QuickTests/4_SymmetricFiniteDepthSphere/: Nemoh.cal
Validation/6_box_coarsemesh/: CMakeLists.txt  Mesh.cal
Validation/7_QTF_Cylinder/hydrostar/mesh634_floating/: DriftFx.rao  DriftFxMF.rao  DriftFyFF.rao  DriftFyMF.rao  DriftMy.rao  DriftMzFF.rao  DriftMzMF.rao  QTFMx.rao  QTFMy.rao  fxf1st.rao  fzf1st.rao  mxf1st.rao  mzf1st.rao  oc5cylinder.gnu  pitch.rao
Validation/8_QTF_OC4_Semisubmersible/: CMakeLists.txt
Validation/8_QTF_OC4_Semisubmersible/hydrostar/mesh2200_Floating/: DriftFx.rao  DriftFxFF.rao  (+15 more)
Validation/9_QTF_SOFTWIND/: CMakeLists.txt
Validation/9_QTF_SOFTWIND/mesh_1872half_QTF_Floating/: CMakeLists.txt
Validation/9_QTF_SOFTWIND/mesh_1872half_nolid_QTF_Floating_FS/: CMakeLists.txt
Validation/postproc_matlab_code/: CompareQTF_NEMOHpostprocN_HYDROSTAR.m
Validation/postproc_matlab_code/data_param/: dataparamNEMOH1_3.m
Validation/postproc_matlab_code/lib/: Compare_all_simuls.m  WRITE_HYDROSTAR_ExctForces_to_NEMOH.m  WRITE_HYDROSTAR_RAO_to_NEMOH.m  funP_contour.m  fun_readHydcoef_NEMOHOutput.m  fun_readHydrostarMQTFOutput.m  fun_readHydrostarQTFOutput.m  fun_readIRF_NEMOHOutput.m  fun_readNEMOHQTFOutputTerms_N.m  fun_readNEMOHQTFOutput_N.m  fun_read_FSPotentialRad_NEMOH.m  fun_read_FSVelocity_NEMOH.m  plot_properties.m
postProcessor/: CMakeLists.txt  IRF.f90  MPP_Compute_RAOs.f90  MPP_ReadInputFiles.f90  Main.f90  Plot_WaveElevation.f90
(+380 files in other folders)
